# LP_SDK

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini  tox.toml
lp_sdk/gladier/: __init__.py  formal_parameters.py  provenance_client.py  provenance_tool.py  provenance_transfers.py
lp_sdk/parser/: cli.py  crate.py  prospective.py  retrospective.py  wep_parsing.py
lp_sdk/provenance/: __init__.py  crate.py
lp_sdk/retrospective/: crate.py
lp_sdk/validation/: comparator.py  schemas.py  util.py  validator.py
parser/: cli.py  crate.py  prospective.py
provenance/: crate.py
retrospective/: crate.py
tests/: test_comparator.py  test_formal_parameters.py  test_gladier_flows.py  test_globus_prospective.py  test_prospective_cli.py  test_provcrate.py  test_retrospective.py  test_validation.py  test_validation_util.py  test_validator.py  test_wep_parsing.py  util.py
tests/data/: prov_WEP.json  ro-crate-metadata.json
tests/data/globus_prov/: WEP.json
tests/data/wep_prov/: WEP.json  ro-crate-metadata.json
tests/integration/: provenance_test.py
validation/: validator.py
