[project]
name = "LP-SDK"
version = "0.0.1"
description = "Live Publication SDK"
requires-python = ">=3.6"
dependencies = [
    "click==8.1.7",
    "numpy==1.26.4",
    "rocrate==0.9.0",
    "runcrate==0.5.0",
]

[project.scripts]
cli = "parser.cli:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"