[project]
name = "LP-SDK"
authors = [
    {name = "Cornelis Drost", email="nelis.drost@auckland.ac.nz"},
    {name = "Augustus Ellerm", email="gus.ellerm@pg.canterbury.ac.nz"}
]
version = "0.0.1"
description = "Live Publication SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.1.7",
    "numpy==1.26.4",
    "rocrate==0.9.0",
    "runcrate==0.5.0",
    "pydantic>=2.7.1",
    "gladier>=0.9.4",
    "gladier-tools>=0.5.4",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "tox>=4",
    "ruff",
]

[project.scripts]
lp-sdk = "lp_sdk.parser.cli:cli"

[project.urls]
Homepage = "https://github.com/LivePublication"
Repository = "https://github.com/LivePublication/LP_SDK"

[tool.flit.module]
name = "lp_sdk"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"